--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/styles": "^6.1.9",
     "@types/node": "^22.10.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
