--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.10.1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
