--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mui/styles": "^6.1.9",
     "@types/node": "^22.10.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-material-ui-carousel": "^3.4.2",
