--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
